fix(style): a word-wrap
fixed issue where long urls would go outside of body max-width

--- a/static/style.css
+++ b/static/style.css
@@ -63,6 +63,10 @@ blockquote {
     text-align: center;
 }
 
+a {
+    word-wrap: break-word;
+}
+
 a:link, a:visited {
     color: #00e;
     text-decoration: none;
